fix img width  issues on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -474,7 +474,7 @@ header .header-content {
         text-align: center;
     }
     #biopic{
-        min-width: 101%;
+        min-width: 101.2%;
         height: 475px;
         background-attachment: scroll;
     }
